update java version to 21 and deps